styles for body

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,20 @@
 *::before {
     box-sizing: border-box;
 }
+
+body {
+    font-family: 'Oswald', sans-serif;
+    font-size: 18px;
+    line-height: 27px;
+    font-weight: 300;
+    color: #2C2B2B;
+}
+
 .header {
     background-image: url("../images/header-bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+    min-height: 700px;
+    color: #fff;
 }
