--- a/css/style.css
+++ b/css/style.css
@@ -33,3 +33,70 @@ a {
     min-height: 700px;
     color: #fff;
 }
+
+.header__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 47px 0 45px;
+}
+
+.phone {
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 54px;
+}
+
+.header__content {
+    position: relative;
+    padding-top: 60px;
+}
+
+.header__title {
+    font-weight: 400;
+    font-size: 72px;
+    line-height: 107px;
+    text-transform: uppercase;
+}
+
+.header__subtitle {
+    font-weight: 300;
+    font-size: 36px;
+    line-height: 54px;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+}
+
+.header__text {
+    max-width: 800px;
+    margin-bottom: 30px;
+}
+
+.button {
+    font-size: 14px;
+    line-height: 21px;
+    text-transform: uppercase;
+    padding: 14px 54px 15px;
+    background-color: #5A0D67;
+}
+
+.button:hover {
+   color: #5A0D67;
+    background-color: #fff;
+}
+
+.header__social {
+    display: flex;
+    align-items: center;
+    padding: 70px 0 20px 65px;
+}
+
+.header__social-link {
+    margin-right: 10px;
+}
+
+.header__images {
+    position: absolute;
+    right: 0;
+    bottom: -270px;
+}
