--- a/css/style.css
+++ b/css/style.css
@@ -100,3 +100,119 @@ a {
     right: 0;
     bottom: -270px;
 }
+
+.services {
+    padding-top: 350px;
+}
+
+.title {
+    position: relative;
+    color: #21062A;
+    font-size: 36px;
+    line-height: 54px;
+    font-weight: 400;
+    text-transform: uppercase;
+    margin-bottom: 50px;
+}
+
+.title::after {
+    content: '';
+    position: absolute;
+    width: 80px;
+    height: 3px;
+    background-color: #21062A;
+    top: 20px;
+    margin-left: 20px;
+}
+
+.services__inner {
+    display: flex;
+    margin-bottom: 100px;
+}
+
+.services__content {
+    width: 505px;
+    margin-right: 96px;
+}
+
+.services__content-title {
+    font-size: 18px;
+    line-height: 27px;
+    font-weight: 300;
+    color: #5A0D67;
+    margin-bottom: 12px;
+}
+
+.services__content-textbox {
+    margin-bottom: 57px;
+}
+
+.services__content-text {
+    margin-bottom: 12px;
+}
+
+.button--decor {
+    position: relative;
+    margin-top: -7px;
+    color: #fff;
+}
+
+.button--decor::after {
+    position: absolute;
+    content: '';
+    color: #C4C4C4;
+    margin-left: 130px;
+}
+
+.button--decor::before {
+    content: '';
+    position: absolute;
+    width: 80px;
+    height: 2px;
+    background-color: #C4C4C4;
+    right: -65px;
+    top: 24px;
+}
+
+.services__list {
+    list-style: none;
+    counter-reset: my-counter;
+}
+
+.services__item {
+    position: relative;
+    counter-increment: my-counter;
+    border: 1px solid #C4C4C4;
+    margin-bottom: 12px;
+    padding: 10px 15px 10px 113px;
+    transition: all .5s;
+}
+
+.services__item:before {
+    content: '0' counter(my-counter);
+    position: absolute;
+    left: 20px;
+    font-size: 36px;
+    line-height: 54px;
+    font-weight: 400;
+    color: #C4C4C4;
+    transform: rotate(270deg);
+    transition: all .5s;
+}
+
+.services__item:hover {
+    border: 2px solid #5A0D67;
+}
+
+.services__item:hover .services__item-title {
+    color: #5A0D67;
+}
+
+.services__item:hover::before {
+    color: #5A0D67;
+}
+
+.services__item-title {
+    font-size: 24px;
+    font-weight: 300;
+}
