--- a/css/style.css
+++ b/css/style.css
@@ -266,5 +266,58 @@ a {
 }
 
 .carousel {
- display: flex;
+    margin-bottom: 100px;
+}
+
+.carousel__inner {
+    margin: 0 -7px;
+}
+
+.carousel__item {
+    margin: 0 7px;
+}
+
+.carousel__item-box {
+    text-align: center;
+    border: 1px solid #C4C4C4;
+    padding: 6px 6px 16px 6px;
+    transition: all .5s;
+}
+
+.carousel__item-box:hover {
+    color: #fff;
+    background-color: #5A0D67;
+    border-color: #5A0D67;
+}
+
+.carousel__item-img {
+    max-width: 100%;
+    margin-bottom: 23px;
+}
+
+.carousel__item-title {
+    font-weight: 300;
+    margin-bottom: 5px;
+}
+
+.carousel .slick-dots {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    list-style: none;
+}
+
+.carousel .slick-dots button {
+    font-size: 0;
+    border: none;
+    padding: 0;
+    margin: 0 10px;
+    background-color: #C4C4C4;
+    width: 50px;
+    height: 1px;
+}
+
+.carousel .slick-active button {
+    background-color: #5A0D67;
+    height: 3px;
 }
