--- a/css/style.css
+++ b/css/style.css
@@ -321,3 +321,66 @@ a {
     background-color: #5A0D67;
     height: 3px;
 }
+
+.contacts__inner {
+    display: flex;
+    justify-content: space-between;
+}
+
+.contacts__list {
+    list-style: none;
+}
+
+.contacts__item {
+    margin-bottom: 20px;
+}
+
+.contacts__item-title {
+    color: #5A0D67;
+}
+
+.contacts__form {
+    text-align: center;
+    background-color: #21062A;
+    padding: 50px 75px 57px;
+}
+
+.contacts__title {
+    margin-bottom: 16px;
+    margin-left: 53px;
+    color: #fff;
+    text-align: left;
+}
+
+.contacts__title:after {
+    background-color: #fff;
+}
+
+.contacts__input {
+    background-color: transparent;
+    width: 450px;
+    height: 75px;
+    color: #fff;
+    border: 1px solid #fff;
+    margin-bottom: 12px;
+    display: block;
+    font-size: 24px;
+    padding: 0 15px;
+    text-align: center;
+}
+
+.contacts__input::placeholder {
+    text-align: center;
+    font-size: 18px;
+    line-height: 27px;
+    font-weight: 300;
+    color: #C4C4C4;
+    font-family: 'Oswald', sans-serif;
+}
+
+.contacts__btn {
+    border: none;
+    color: #fff;
+    margin-top: 78px;
+    cursor: pointer;
+}
