--- a/css/style.css
+++ b/css/style.css
@@ -86,13 +86,16 @@ a {
 }
 
 .header__social {
-    display: flex;
-    align-items: center;
-    padding: 70px 0 20px 65px;
+    padding: 70px 0 20px 70px;
 }
 
-.header__social-link {
-    margin-right: 10px;
+.social {
+    display: flex;
+    align-items: center;
+}
+
+.social__link {
+    margin:0 5px;
 }
 
 .header__images {
