--- a/css/style.css
+++ b/css/style.css
@@ -387,3 +387,15 @@ a {
     margin-top: 78px;
     cursor: pointer;
 }
+
+.footer {
+    background-color: #21062A;
+}
+
+.footer__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff;
+    height: 100px;
+}
