--- a/css/style.css
+++ b/css/style.css
@@ -399,3 +399,70 @@ a {
     color: #fff;
     height: 100px;
 }
+
+@media (max-width: 1024px) {
+    .header__images {
+        width: 80%;
+    }
+}
+
+@media (max-width: 900px) {
+    .header__images {
+        width: 80%;
+    }
+    .phone {
+        font-size: 24px;
+        line-height: 36px;
+    }
+    .header__title {
+        font-size: 54px;
+        line-height: 74px;
+    }
+    .header__subtitle {
+        font-size: 24px;
+        line-height: 36px;
+        margin-bottom: 20px;
+    }
+    .header__social {
+        padding: 30px 0 20px 53px;
+    }
+}
+
+@media (max-width: 600px) {
+    .header__content {
+        padding-top: 0;
+        text-align: center;
+    }
+    .header__social {
+        padding: 30px 0 20px 0;
+    }
+    .social {
+        justify-content: center;
+    }
+}
+
+@media (max-width: 520px) {
+    .header__top {
+        flex-wrap: wrap;
+        justify-content: center;
+        text-align: center ;
+    }
+    .logo {
+        margin-bottom: 20px;
+        width: 100%;
+    }
+    .header__title {
+        margin-bottom: 20px;
+    }
+    .header__images {
+        position: sticky;
+        width: 100%;
+    }
+}
+
+@media (max-width: 320px) {
+    .header__title {
+        font-size: 44px;
+        line-height: 50px;
+    }
+}
