--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ a {
 }
 
 .button:hover {
-   color: #5A0D67;
+    color: #5A0D67;
     background-color: #fff;
 }
 
@@ -95,7 +95,7 @@ a {
 }
 
 .social__link {
-    margin:0 5px;
+    margin: 0 5px;
 }
 
 .header__images {
@@ -400,9 +400,42 @@ a {
     height: 100px;
 }
 
+
+@media (max-width: 1140px) {
+    .services__item:hover {
+        width: 450px;
+    }
+}
+
 @media (max-width: 1024px) {
     .header__images {
         width: 80%;
+    }
+
+    .services {
+        padding-top: 250px;
+    }
+
+    .services__inner {
+        flex-wrap: wrap;
+    }
+
+    .services__list {
+        order: -1;
+        margin-bottom: 30px;
+    }
+
+    .services__item {
+        width: 100%;
+    }
+
+    .services__item:hover {
+        width: 100%;
+    }
+
+    .services__content {
+        width: 100%;
+        margin-right: 0;
     }
 }
 
@@ -410,19 +443,23 @@ a {
     .header__images {
         width: 80%;
     }
+
     .phone {
         font-size: 24px;
         line-height: 36px;
     }
+
     .header__title {
         font-size: 54px;
         line-height: 74px;
     }
+
     .header__subtitle {
         font-size: 24px;
         line-height: 36px;
         margin-bottom: 20px;
     }
+
     .header__social {
         padding: 30px 0 20px 53px;
     }
@@ -433,11 +470,37 @@ a {
         padding-top: 0;
         text-align: center;
     }
+
     .header__social {
         padding: 30px 0 20px 0;
     }
+
     .social {
         justify-content: center;
+    }
+
+    .services {
+        padding-top: 150px;
+    }
+
+    .title {
+        text-align: center;
+        font-size: 28px;
+        line-height: 36px;
+        margin-bottom: 30px;
+    }
+
+    .title::after {
+        display: none;
+    }
+
+    body {
+        font-size: 16px;
+        line-height: 22px;
+    }
+
+    .services__item::before {
+        top: 5px;
     }
 }
 
@@ -445,22 +508,51 @@ a {
     .header__top {
         flex-wrap: wrap;
         justify-content: center;
-        text-align: center ;
+        text-align: center;
     }
+
     .logo {
         margin-bottom: 20px;
         width: 100%;
     }
+
     .header__title {
         margin-bottom: 20px;
     }
+
     .header__images {
         position: sticky;
         width: 100%;
     }
+
+    .services {
+        padding-top: 50px;
+    }
+
+    .services__item {
+        padding: 10px 15px 10px 60px;
+    }
+
+    .services__item::before {
+        left: 11px;
+    }
+
+    .button--decor::before {
+        right: -50px;
+    }
+    .button--decor::after {
+        margin-left: 110px;
+    }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 360px) {
+    .button--decor::before,
+    .button--decor::after {
+        display: none;
+    }
+}
+
+@media (max-width: 340px) {
     .header__title {
         font-size: 44px;
         line-height: 50px;
