--- a/css/style.css
+++ b/css/style.css
@@ -502,6 +502,10 @@ a {
     .services__item::before {
         top: 5px;
     }
+
+    .services__content {
+        text-align: center;
+    }
 }
 
 @media (max-width: 520px) {
@@ -542,6 +546,9 @@ a {
     }
     .button--decor::after {
         margin-left: 110px;
+    }
+    .services__inner {
+        margin-bottom: 50px;
     }
 }
 
