mobile version of benefits

--- a/css/style.css
+++ b/css/style.css
@@ -437,6 +437,9 @@ a {
         width: 100%;
         margin-right: 0;
     }
+    .benefits__images {
+        display: none;
+    }
 }
 
 @media (max-width: 900px) {
@@ -462,6 +465,22 @@ a {
 
     .header__social {
         padding: 30px 0 20px 53px;
+    }
+}
+
+@media (max-width: 768px) {
+    .services__inner {
+        text-align: center;
+    }
+    .benefits__list {
+        padding: 25px 15px;
+        text-align: center;
+    }
+    .benefits__item {
+        width: 100%;
+    }
+    .benefits__title {
+        margin-left: 0;
     }
 }
 
@@ -506,6 +525,10 @@ a {
     .services__content {
         text-align: center;
     }
+    .benefits__item-num {
+        font-size: 28px;
+        line-height: 36px;
+    }
 }
 
 @media (max-width: 520px) {
@@ -547,7 +570,8 @@ a {
     .button--decor::after {
         margin-left: 110px;
     }
-    .services__inner {
+    .services__inner,
+    .benefits {
         margin-bottom: 50px;
     }
 }
