--- a/css/style.css
+++ b/css/style.css
@@ -529,6 +529,9 @@ a {
         font-size: 28px;
         line-height: 36px;
     }
+    .carousel__item-img {
+        width: 100%;
+    }
 }
 
 @media (max-width: 520px) {
@@ -571,8 +574,12 @@ a {
         margin-left: 110px;
     }
     .services__inner,
-    .benefits {
+    .benefits,
+    .carousel {
         margin-bottom: 50px;
+    }
+    .carousel .slick-dots button {
+        width: 10px;
     }
 }
 
