--- a/css/style.css
+++ b/css/style.css
@@ -466,6 +466,23 @@ a {
     .header__social {
         padding: 30px 0 20px 53px;
     }
+    .contacts__inner {
+        display: block;
+        text-align: center;
+    }
+    .contacts__list {
+        margin-bottom: 30px;
+    }
+    .contacts__input {
+        width: 100%;
+    }
+    .contacts__btn {
+        margin-top: 20px;
+    }
+    .contacts__title {
+        text-align: center;
+        margin-left: 0;
+    }
 }
 
 @media (max-width: 768px) {
@@ -581,13 +598,17 @@ a {
     .carousel .slick-dots button {
         width: 10px;
     }
-}
-
-@media (max-width: 360px) {
+    .contacts__form {
+        padding: 50px 10px 57px;
+    }
     .button--decor::before,
     .button--decor::after {
         display: none;
     }
+}
+
+@media (max-width: 360px) {
+
 }
 
 @media (max-width: 340px) {
